HelloWorldApp/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: default  # ✅ Moved to default namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"    # Forces HTTP to HTTPS redirection even if TLS is not configured in the Ingress
spec:
  ingressClassName: nginx  # ✅ Ensures Ingress is using the correct class
  tls:
    - hosts:
        - cyberwing.info
      secretName: argocd-tls
  rules:
    - host: cyberwing.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
          - path: /umair
            pathType: Prefix
            backend:
              service:
                name: helloworldapp-service
                port:
                  number: 8080
