HelloWorldApp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default  # ✅ Moved to default namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /    
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"  
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"    # Forces HTTP to HTTPS redirection even if TLS is not configured in the Ingress
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location /attorney {
          root /usr/share/nginx/html;
          index index.html;
          try_files $uri $uri/ /index.html;
      }
spec:
  ingressClassName: nginx  # ✅ Ensures Ingress is using the correct class
  tls:
    - hosts:
        - cyberwing.info
      secretName: tls
  rules:
    - host: cyberwing.info
      http:
        paths:
          - path: /umair
            pathType: Prefix
            backend:
              service:
                name: helloworldapp-service
                port:
                  number: 9090
          - path: /image
            pathType: Prefix
            backend:
              service:
                name: helloworldapp-service
                port:
                  number: 9090
          - path: /attorney
            pathType: Prefix
            backend:
              service:
                name: attorney-service
                port:
                  number: 8888
